# lattice-anonymous-credentials

./: .gitmodules  Dockerfile  README.md
code/: CMakeLists.txt
code/bench/: bench_osig.c  bench_osig.h  bench_sep.c  bench_sep.h  bench_show.c  bench_show.h  benchmark.c  benchmark.h  cpucycles.h  main.c
code/include/: covariance.h  fips202.h  four_squares.h  macros.h  osig.h  params.h  random.h  randombytes.h  sep.h  show.h
code/include/arith/: arith.h
code/include/arith/arith_q/: arith_q.h  poly_q.h  poly_q_mat_d_d.h  poly_q_mat_d_k.h  poly_q_mat_d_m.h  poly_q_sampling.h  poly_q_vec_d.h  poly_q_vec_k.h  poly_q_vec_m.h
code/include/arith/arith_qiss/: arith_qiss.h  poly_qiss.h  poly_qiss_mat_256l_m2.h  poly_qiss_mat_d_k.h  poly_qiss_mat_d_m2.h  poly_qiss_mat_k_k.h  poly_qiss_sampling.h  poly_qiss_vec_256.h  poly_qiss_vec_256_l.h  poly_qiss_vec_d.h  poly_qiss_vec_k.h  poly_qiss_vec_l.h  poly_qiss_vec_m2.h
code/include/arith/arith_qshow/: arith_qshow.h  poly_qshow.h  poly_qshow_mat_256l_m2.h  poly_qshow_mat_d_k.h  poly_qshow_mat_d_m1.h  poly_qshow_mat_d_m2.h  poly_qshow_mat_k_k.h  poly_qshow_sampling.h  poly_qshow_vec_256.h  poly_qshow_vec_256_l.h  poly_qshow_vec_d.h  poly_qshow_vec_k.h  poly_qshow_vec_l.h  poly_qshow_vec_m1.h  poly_qshow_vec_m2.h
code/include/arith/arith_real/: arith_real.h  poly_real.h  poly_real_mat_2d_2d.h  poly_real_vec_2d.h
code/include/arith/arith_z/: arith_z.h  poly_z.h  poly_z_mat_d_d.h  poly_z_vec_d.h
code/src/: covariance.c  four_squares.c  osig.c  osig_proof_verify.c  osig_prove.c  random.c  randombytes.c  sep.c  show.c  show_proof_verify.c  show_prove.c
code/src/arith/: arith.c
code/src/arith/arith_q/: poly_q.c  poly_q_mat_d_d.c  poly_q_mat_d_k.c  poly_q_mat_d_m.c  poly_q_sampling.c  poly_q_vec_d.c  poly_q_vec_k.c  poly_q_vec_m.c
code/src/arith/arith_qiss/: poly_qiss.c  poly_qiss_mat_256l_m2.c  poly_qiss_mat_d_k.c  poly_qiss_mat_d_m2.c  poly_qiss_mat_k_k.c  poly_qiss_sampling.c  poly_qiss_vec_256.c  poly_qiss_vec_256_l.c  poly_qiss_vec_d.c  poly_qiss_vec_k.c  poly_qiss_vec_l.c  poly_qiss_vec_m2.c
code/src/arith/arith_qshow/: poly_qshow.c  poly_qshow_mat_256l_m2.c  poly_qshow_mat_d_k.c  poly_qshow_mat_d_m1.c  poly_qshow_mat_d_m2.c  poly_qshow_mat_k_k.c  poly_qshow_sampling.c  poly_qshow_vec_256.c  poly_qshow_vec_256_l.c  poly_qshow_vec_d.c  poly_qshow_vec_k.c  poly_qshow_vec_l.c  poly_qshow_vec_m1.c  poly_qshow_vec_m2.c
code/src/arith/arith_real/: poly_real.c  poly_real_mat_2d_2d.c  poly_real_vec_2d.c
code/src/arith/arith_z/: poly_z.c  poly_z_mat_d_d.c  poly_z_vec_d.c
code/test/: main.c
scripts/: estimate_SIS_LWE.py  parameters.py
